# wasm-rusty-color-shredder

./: .gitignore  Cargo.toml  README.md  cargo.toml  index.html  index.js  package.json  webpack.config.js
src/: app_state.rs  common_functions.rs  constants.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  color_2d_gradient.rs  graph_3d.rs  mod.rs  texture_2d.rs
src/shaders/fragment/: color_2d.rs  color_2d_gradient.rs  texture_2d.rs
src/shaders/vertex/: color_2d.rs  color_2d_gradient.rs  mod.rs  texture_2d.rs
