[package]
name = "color_shredder"
version = "0.1.0"
authors = ["Henry Luengas"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "^0.3.55"
wasm-bindgen = "^0.2.78"
rand = "^0.8.4"
console_error_panic_hook = "^0.1.7"

[dependencies.getrandom]
version = "^0.2.3"
features = [
    "js",
    "wasm-bindgen"
]

[dependencies.web-sys]
version = "0.3.4"
features = [
    "ImageData",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlRenderingContext",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]